@@ -1,3 +1,9 @@
+2010-01-14: .005
+  - Make net_server and handler_class methods work as setters
+  - Add setters for index filename and default extension
+  - Add allowindex option for directory indexes (off by default)
+  - Misc cleanup and doc work
+
 2009-11-02: .004
   - Add docroot() method
   - Add arg parsing to pillbug script
